# gptanalyzer

./: .gitignore  README.md  check.sh  pyproject.toml
docs/: Ex.md  header.html  index.html  ln_linearity.html  logit_lens_wob.html  posenc_attnbias.html  style.css
docs/js/: mathjax_config.js
gptanalyzer/: __init__.py  main.py  pipeline.py
gptanalyzer/analyzers/: __init__.py  logit_lens.py  weight2img.py
gptanalyzer/models/: __init__.py  gpt2.py  gptneox.py  hook.py  models_test.py
gptanalyzer/modules/: __init__.py  hydra_frequents.py  inference.py  inference_test.py  model_hooks.py  my_dataclasses.py  my_torchtyping.py  mylogger.py
gptanalyzer/nn_utils/: __init__.py
gptanalyzer/visualizers/: __init__.py  logit_lens.py
